# braves-board-backend

./: .gitignore  Dockerfile  README.md  Untitled-1.json  docker-compose.yml  env..example  package-lock.json  requirements.txt
src/backend/: alembic.ini  pyproject.toml
src/backend/app/: main.py  migrate.py  settings.py
src/backend/app/api/: depedencies.py  main.py
src/backend/app/api/auth/: repository.py  schema.py  use_cases.py  views.py
src/backend/app/api/board/: repository.py  schema.py  use_cases.py  views.py
src/backend/app/api/column/: repository.py  schema.py  use_cases.py  views.py
src/backend/app/api/exceptions/: auth_exceptions.py  base_exceptions.py  board_exceptions.py  column_exceptions.py  exception_handlers.py  setup_exceptions.py  subtask_exceptions.py  task_attachment_exceptions.py  task_comment_exceptions.py  task_exceptions.py  (+1 more)
src/backend/app/connections/: postgres.py  redis.py
src/backend/app/lib/: jwt_utils.py  storage_util.py
src/backend/app/middleware/: access_log.py  cors.py  rate_limit.py
src/backend/app/models/: __init__.py  board_model.py  column_model.py  subtask_model.py  task_attachment_model.py  task_comment_model.py  task_model.py  time_log_model.py  user_model.py
src/backend/app/observability/: metrics.py  middleware.py  prometheus.yml
src/backend/db_migrations/: env.py
src/backend/db_migrations/versions/: 1097929dc4bb_add_start_time_and_total_duration_to_.py  51977000ee4a_create_columns_table.py  8e916b03fc20_create_tasks_table.py  bd9b2be81b0d_create_users_table.py  cfe333113cde_create_boards_table.py
(+187 files in other folders)
